--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "http://rojasleon.github.io/personal-site"
   "devDependencies": {
+    "gh-pages": "^1.1.0",
     "svg-react-loader": "^0.4.5"
   }
 }
