--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://luisrojas.me/personal-site",
+  "homepage": "https://rojasleon.github.io/personal-site",
   "devDependencies": {
     "gh-pages": "^1.1.0",
     "svg-react-loader": "^0.4.5"
