--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build"
   },
   "homepage": "https://rojasleon.github.io/personal-site",
   "devDependencies": {
