--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
+    "react-redux-loading": "^1.0.1",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "redux": "^4.0.0",
     "styled-components": "^3.2.3"
   },
   "scripts": {
