--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0",
     "styled-components": "^3.2.3"
   },
   "scripts": {
@@ -19,6 +20,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "redux-logger": "^3.0.6",
     "svg-react-loader": "^0.4.5"
   }
 }
