--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "site",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rojasleon.github.io/luisrojas",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -17,9 +18,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "gh-pages": "^1.2.0",
     "redux-logger": "^3.0.6",
     "svg-react-loader": "^0.4.5"
   }
