I don't think so

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "site",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rojasleon.github.io/site",
+  "homepage": "https://rojasleon.github.io/home",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
