without github page

--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "site",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rojasleon.github.io/home",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -18,9 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "gh-pages": "^1.2.0",
