--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
     "react-redux": "^5.0.7",
     "react-redux-loading": "^1.0.1",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
+    "react-router-dom": "^4.4.0-beta.6",
+    "react-scripts": "^2.1.3",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "styled-components": "^3.2.3"
@@ -22,6 +22,12 @@
   "devDependencies": {
     "gh-pages": "^1.2.0",
     "redux-logger": "^3.0.6",
-    "svg-react-loader": "^0.4.5"
-  }
+    "svg-react-loader": "^0.4.6"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
