--- a/package.json
+++ b/package.json
@@ -3,24 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.4.0-beta.6",
-    "react-scripts": "^2.1.3",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.2.0",
-    "styled-components": "^3.2.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "next": "^8.1.0",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
-    "redux-logger": "^3.0.6",
-    "svg-react-loader": "^0.4.6"
+    "babel-plugin-styled-components": "^1.8.0"
+  },
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   },
   "browserslist": [
     ">0.2%",
