--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -26,6 +25,7 @@ yarn-error.log*
 # Environment
 .vscode
 .netlify
+.cache
 
 # Unix (Created by VIM)
 *.swp
